# aoc2022-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: day1.cpp
